--- a/css/styles.css
+++ b/css/styles.css
@@ -331,3 +331,5 @@ img {
 /* ===================== TEXT ===================== */
 
 /* ===================== END TEXT ===================== */
+
+/* qweqweqwe */
